@@ -1,0 +1,5 @@
+[environment]
+connect_method = local
+
+[hosts]
+localhost = largetemplate
